working with full read access.

--- a/aws/s3_bucket_list.policy.template
+++ b/aws/s3_bucket_list.policy.template
@@ -1,36 +1,49 @@
 {
-   "Version": "2012-10-17",
-   "Statement": [
-   {
-   			"Sid": "AllowGetBucketToInterana",
-   			"Effect": "Allow",
-   			"Principal": {
-   				"AWS": "arn:aws:iam::<INTERANA_ACCOUNT_ID>:root"
-   			},
-   			"Action": [
-   				"s3:GetBucketLocation"
-   			],
-   			"Resource": "arn:aws:s3:::provision-test"
-   		},
-      {
-         "Sid": "AllowReadAccessToInterana",
-         "Effect": "Allow",
-         "Principal": {
-            "AWS": "arn:aws:iam::<INTERANA_ACCOUNT_ID>:root"
-         },
-         "Action": [
-            "s3:ListBucket"
-         ],
-         "Resource": [
-            "arn:aws:s3:::<BUCKET_NAME>"
-         ],
-         "Condition": {
-				"StringLike": {
-					"s3:prefix": [
-						"<BUCKET_PREFIX>"
-					]
-				}
-			}
-      }
-   ]
+    "Version": "2012-10-17",
+    "Statement": [
+        {
+            "Sid": "AllowGetBucketToInterana",
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "arn:aws:iam::<INTERANA_ACCOUNT_ID>:root"
+            },
+            "Action": [
+                "s3:GetBucketLocation"
+            ],
+            "Resource": "arn:aws:s3:::provision-test"
+        },
+        {
+            "Sid": "AllowReadAccessToInterana",
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "arn:aws:iam::<INTERANA_ACCOUNT_ID>:root"
+            },
+            "Action": [
+                "s3:ListBucket"
+            ],
+            "Resource": [
+                "arn:aws:s3:::<BUCKET_NAME>"
+            ],
+            "Condition": {
+                "StringLike": {
+                    "s3:prefix": [
+                        "<BUCKET_PREFIX>"
+                    ]
+                }
+            }
+        },
+        {
+            "Sid": "AllowReadAccessToInterana",
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "arn:aws:iam::<INTERANA_ACCOUNT_ID>:root"
+            },
+            "Action": [
+                "s3:GetObject"
+            ],
+            "Resource": [
+                "arn:aws:s3:::<BUCKET_NAME>/<BUCKET_PREFIX>*"
+            ]
+        }
+    ]
 }
