fixing s3_bucket_list template and added debug to provision.py

--- a/aws/s3_bucket_list.policy.template
+++ b/aws/s3_bucket_list.policy.template
@@ -10,7 +10,7 @@
             "Action": [
                 "s3:GetBucketLocation"
             ],
-            "Resource": "arn:aws:s3:::provision-test"
+            "Resource": "arn:aws:s3:::<BUCKET_NAME>"
         },
         {
             "Sid": "AllowReadAccessToInterana",
