added support for multiple s3 bucket paths.

--- a/aws/s3bucket/s3_bucket_list.policy.template
+++ b/aws/s3bucket/s3_bucket_list.policy.template
@@ -27,7 +27,7 @@
             "Condition": {
                 "StringLike": {
                     "s3:prefix": [
-                        "<BUCKET_PREFIX>"
+                        <BUCKET_PREFIX_LIST>
                     ]
                 }
             }
@@ -43,7 +43,7 @@
                 "s3:RestoreObject"
             ],
             "Resource": [
-                "arn:aws:s3:::<BUCKET_NAME>/<BUCKET_PREFIX>*"
+                <ARN_FULL_BUCKET_LIST>
             ]
         }
     ]
